# AAFK-Sober

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  state.rs  ui.rs
