[package]
name = "aafk-sober"
version = "0.2.2"
edition = "2024"
description = "Anti-AFK application for Sober (Roblox on Linux)"
repository = "https://github.com/aneek0/AAFK-Sober"
license = "MIT"
keywords = ["roblox", "linux", "antiafk", "sober", "niri"]
categories = ["command-line-utilities"]

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
glib = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evdev = "0.12"
ksni = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
notify-rust = "4.11"
dirs = "5.0"
nix = "0.23"

[package.metadata.appimage]
name = "aafk-sober"
icon = "assets/logo.png"
desktop_entry = "dev.agzes.antiafk-rbx-sober.desktop"
auto_link = true
category = "Utility"